--- a/css/perso.css
+++ b/css/perso.css
@@ -23,13 +23,14 @@
 
 h2.tag {padding: 2px 8px;padding-left:40px;background: #ddd url(img/tag-32.png) no-repeat 2px center;margin-right:5px; border-radius: 10px;display: inline-block;}
 
-.page_article .imdb dt {display: none;}
+.page_article h1 {display: none;}
+.page_article .imdb dt {font-size: 1.5em;}
 .comments {margin-top: 3em;}
 .liste-items.films .item .comments {padding-left: 90px;}
 .liste-items.films .item .comments h2 {display: none;}
 .liste-items.films .item .comments-items {list-style: none;margin-left: 0px;border-color: #ddd;}
 .liste-items.films .item .comment-item {border-color: #ddd;}
-.liste-items.films .item .comment-item .comment-meta .item {padding: 0;}
+.comment-item .comment-meta .item {padding: 0;display: none;}
 
 .box_mediabox {text-align: left;}
 .box_mediabox .content-principal {max-width: 44em;margin-right: 20px;}
